Small improvement in parsing